--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
      box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.8);
 }
 
+.swiper-pagination .swiper-pagination-bullet-active {
+     background-color: #7AB259;
+}
+
 @layer base {
      body {
           @apply font-Poppins;
